<resources>
    <string name="app_name">AppsFlyerHomeAssignmentClient</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="answer4">Answer4</string>
    <string name="answer3">Answer3</string>
    <string name="answer2">Answer2</string>
    <string name="answer1">Answer1</string>
    <string name="question">Question</string>
</resources>